<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.cyan</groupId>
        <artifactId>cyan-cdc</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>cyan-cdc-application</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.cyan</groupId>
            <artifactId>arch-base</artifactId>
        </dependency>
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
        </dependency>
        <!-- MySQL 驱动（Spring Boot 3 推荐使用 8.x 版本，兼容 Jakarta EE） -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope> <!-- 运行时依赖，编译期无需 -->
        </dependency>

        <dependency>
            <groupId>com.cyan</groupId>
            <artifactId>cyan-cdc-client</artifactId>
        </dependency>

        <!-- Debezium 核心依赖 -->
        <dependency>
            <groupId>io.debezium</groupId>
            <artifactId>debezium-api</artifactId>
        </dependency>
        <dependency>
            <groupId>io.debezium</groupId>
            <artifactId>debezium-embedded</artifactId>
        </dependency>
        <!-- 关键：Debezium MySQL 连接器（3.x 必须单独引入） -->
        <dependency>
            <groupId>io.debezium</groupId>
            <artifactId>debezium-connector-mysql</artifactId>
        </dependency>

    </dependencies>


    <build>
        <finalName>cyan-cdc</finalName>
        <plugins>
            <!-- 核心JAR打包插件（自定义JAR名称、排除不必要文件等） -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>3.3.13</version> <!-- 与父依赖版本一致 -->
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal> <!-- 关键：重新打包为可执行 JAR -->
                        </goals>
                    </execution>
                </executions>
                <!-- 可选：指定主类（如果插件未自动识别） -->
                <configuration>
                    <mainClass>com.cyan.cdc.Application</mainClass>
                </configuration>

            </plugin>
        </plugins>
    </build>
</project>